# market-sentiment-analysis

./: .gitignore  CONTRIBUTING.md  EDA_Guidelines.md  LICENSE  README.md  Untitled-1.ipynb  df_filter_audit.md  environment.yml  pyproject.toml  requirements.txt
analysis/: analysis_template.ipynb  correlation_mapping.ipynb  correlation_mapping_2.ipynb  finbert_scoring.ipynb  risk_signal_findings.md  robustness_summary.md  tuning_reference.ipynb
analysis/hypotheses/: 01-hyp_mag7_dispersion.ipynb  (+6 more)
docs/: DEVELOPER.md  data_snapshot_log.md  ingestion_assumptions.md  manifest_schema.json  metrics.md  model_spec.md  weekend_effect_analysis.md
models/: 00-model-selection-start.ipynb  01-model-selection-exploration.ipynb  02-model-selection-baseline.ipynb  03-model-selection-advanced.ipynb  04-model-selection-evaluation.ipynb
notebooks/: data_validation.ipynb  gdelt_validation.ipynb  pytrends_playground.ipynb  sentiment_summary.ipynb
results/: feature_analysis.csv  model_narrative.md  signal_validation.csv
scripts/: accumulate.py  add_sentiment.py  add_sentiment_finbert.py  add_sentiment_v2.py  app.py  build_gdelt_ohlcv_join.py  build_manifest.py  cleaning_data.py  cleaning_gdelt.py  data_ingestion.py  dedupe.py  dedupe_and_sentiment.py  export_shared_datasets.py  fill_missing_dates.py  fill_missing_dates.sh  gdelt_validation.py  ingest_demo.py  jero_eda.py  market_analysis.py  news_gap_impact.py  ohlcv_cleaning.py  ohlcv_validation.py  old-sentiment_lexicon.py  run_pipeline.sh  single_ticker_deep_dive.py  test_finbert_sample.py  validate_gdelt.py
(+53 files in other folders)
