[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msa"
version = "0.1.0"
description = "Exploratory sentiment analysis for MAG7 technology companies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2",
    "matplotlib>=3.9",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[tools.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]